--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "futures-retry-policies"
-version = "0.2.0"
+version = "0.2.1"
 edition = "2021"
 authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
 description = "Retriable Futures"
@@ -21,12 +21,18 @@ chrono = { version = "0.4", optional = true }
 
 tracing = { version = "0.1", optional = true }
 
+retry = { version = "1", optional = true }
+
+futures-retry = { version = "0.6", optional = true }
+
 [dev-dependencies]
 tokio = { version = "1", features = ["full"] }
+retry = "1.3.1"
 
 [features]
 default = ["retry-policies", "tokio", "tracing"]
 retry-policies = ["dep:retry-policies", "chrono"]
+retry-crate = ["retry"]
 
 # Properly document all features on docs.rs
 [package.metadata.docs.rs]
