--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "futures-retry-policies"
-version = "0.2.1"
+version = "0.2.2"
 edition = "2021"
 authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
 description = "Retriable Futures"
@@ -11,28 +11,38 @@ categories = ["network-programming"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+default = ["retry-policies", "tokio", "tracing"]
+#! ## Features
+
+## Enables interopt with the [`retry-policies`](retry_policies) crate
+retry-policies = ["dep:retry-policies", "chrono"]
+
+## Enables interopt with the [`retry`](::retry) crate
+retry-crate = ["retry"]
+
 [dependencies]
 pin-project = "1"
 
+## Provides tokio convenience methods
 tokio = { version = "1", optional = true, features = ["time"] }
 
+# documented above (retry-policies)
 retry-policies = { version = "0.1.1", optional = true }
-chrono = { version = "0.4", optional = true }
+chrono = { version = "0.4", optional = true, default-features = false, features = ["std", "clock"] }
 
+## Enables traced retry policies
 tracing = { version = "0.1", optional = true }
 
+# documented above (retry-crate)
 retry = { version = "1", optional = true }
 
+## Enables interopt with the [`futures-retry`](futures_retry) crate
 futures-retry = { version = "0.6", optional = true }
 
 [dev-dependencies]
 tokio = { version = "1", features = ["full"] }
 retry = "1.3.1"
-
-[features]
-default = ["retry-policies", "tokio", "tracing"]
-retry-policies = ["dep:retry-policies", "chrono"]
-retry-crate = ["retry"]
 
 # Properly document all features on docs.rs
 [package.metadata.docs.rs]
