--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "futures-retry-policies"
-version = "0.2.3"
+version = "0.3.0"
 edition = "2021"
 authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
-description = "Retriable Futures"
+description = "Retryable Futures"
 repository = "https://github.com/conradludgate/futures-retry-policies"
 license = "MIT OR Apache-2.0"
 keywords = ["async", "futures", "retry", "policy", "backoff"]
@@ -15,10 +15,10 @@ categories = ["network-programming"]
 default = ["retry-policies", "tokio", "tracing"]
 #! ## Features
 
-## Enables interopt with the [`retry-policies`](retry_policies) crate
+## Enables  with the [`retry-policies`](retry_policies) crate
 retry-policies = ["dep:retry-policies", "chrono"]
 
-## Enables interopt with the [`retry`](::retry) crate
+## Enables interop with the [`retry`](::retry) crate
 retry-crate = ["retry"]
 
 [dependencies]
@@ -28,21 +28,21 @@ pin-project = "1"
 tokio = { version = "1", optional = true, features = ["time"] }
 
 # documented above (retry-policies)
-retry-policies = { version = "0.1.1", optional = true }
+retry-policies = { version = "0.2", optional = true }
 chrono = { version = "0.4", optional = true, default-features = false, features = ["std", "clock"] }
 
 ## Enables traced retry policies
 tracing = { version = "0.1", optional = true }
 
 # documented above (retry-crate)
-retry = { version = "1", optional = true }
+retry = { version = "2", optional = true }
 
-## Enables interopt with the [`futures-retry`](futures_retry) crate
+## Enables interop with the [`futures-retry`](futures_retry) crate
 futures-retry = { version = "0.6", optional = true }
 
 [dev-dependencies]
 tokio = { version = "1", features = ["full"] }
-retry = "1.3.1"
+retry = "2.0.0"
 
 # Properly document all features on docs.rs
 [package.metadata.docs.rs]
